# Sharingan

./: .gitignore  LICENSE  README.md  add_15_libs.py  export_cloud_graphs.py  extract_all.sh  fix_encoding.py  fix_versions.py  package_cdn.sh  pyproject.toml  refactor_cli.py  refactor_serve.py  registry.json  test_parse.py  update_registry.py
.agents/rules/: sharingan.md
.cursor/rules/: sharingan.mdc
indexes/: by-category.json  by-language.json  by-symbol-name.json
libraries/fastapi/versions/0.115.0/: edges.json  guides.json  symbols.json  version.json
libraries/nextjs/versions/15.3.2/: edges.json  graph.json  symbols.json
libraries/nodejs/versions/22.16.0/: edges.json
libraries/react/: meta.json
libraries/react/versions/19.1.0/: edges.json  graph.json  symbols.json
libraries/tailwindcss/versions/4.1.0/: graph.json  version.json
libraries/zod/versions/3.24.4/: edges.json  graph.json  guides.json  symbols.json  version.json
sharingan/: __init__.py  __main__.py  build.py  cache.py  cli.py  cloud.py  cluster.py  config.py  dependencies.py  discover.py  extract.py  fetch.py  parse.py  pipeline.py  scanner.py  search.py  serve.py  skills.py
sharingan/data/: registry.json
sharingan/data/indexes/: by-category.json  by-language.json  by-symbol-name.json
sharingan/data/libraries/fastapi/: meta.json
sharingan/data/libraries/fastapi/versions/0.111.0/: clusters.json  edges.json  graph.json  guides.json  symbols.json  version.json
sharingan/data/libraries/fastapi/versions/0.115.0/: clusters.json  graph.json
sharingan/data/libraries/nextjs/: meta.json
sharingan/data/libraries/nextjs/versions/15.3.2/: clusters.json  guides.json  version.json
sharingan/data/libraries/nodejs/: meta.json
sharingan/data/libraries/nodejs/versions/22.16.0/: graph.json  guides.json  symbols.json  version.json
sharingan/data/libraries/prisma/: meta.json
sharingan/data/libraries/prisma/versions/6.3.0/: clusters.json  edges.json  graph.json  guides.json  symbols.json  version.json
sharingan/data/libraries/react/versions/19.1.0/: guides.json  (+1 more)
sharingan/data/libraries/tailwindcss/: meta.json
sharingan/data/libraries/zod/: meta.json
sharingan/data/schema/: v1.json
(+17 files in other folders)
